<resources>
    <string name="app_name">App Pets</string>
    <string name="Botón">Botón</string>


    <string name="pnombre">Nombre</string>
    <string name="menu_estrella">Me gusta</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_acercade">Acerca de</string>


    <string name="datos">CONTACTO</string>
    <string name="acerca_de">ACERCA DE MI</string>
    <string name="acerca_de_mi">Mi nombre es Miguel y soy diseñador y realizador audiovisual, me gusta innovar y por eso estoy acá,
    en el mundo de la programación, para hacer algo diferente</string>

    <string name="comentario">Enviar comentario</string>
    <string name="msg_send">Mensaje Enviado</string>

    <string name="chandosin">Chandosin</string>

    <string name="hint_nombre">Nombre</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_mensaje">Mensaje</string>

    <string name="nombre">Miguel Angel</string>
    <string name="email">mmm@yahoo.com</string>
    <string name="mensaje">El tipo que quiere aprender a programar</string>

</resources>
