<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.miguello.apppets.activity_contacto">


    <include android:id="@+id/miActionBar"
        layout="@layout/actionbar">
    </include>



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/margin_toptitle">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datos"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/margin_toptitle"
        android:textColor="@color/colorPrimary"/>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_toptitle">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/hint_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombre"
            android:layout_marginTop="@dimen/margin_top"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/hint_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:layout_marginTop="@dimen/margin_top"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/hint_mensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_mensaje"
            android:layout_marginTop="@dimen/margin_top"/>


    </android.support.design.widget.TextInputLayout>




    <Button
        android:id="@+id/siguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comentario"
        android:textColor="#FFFFFF"
        android:layout_marginTop="@dimen/text_size_nombre"
        android:theme="@style/MiBotonRaised"/>


</LinearLayout>


</FrameLayout>

